Updated webpage with new changes

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </tr>
         <tr bgcolor="#E3F2FD">
             <td><a href="task-5/task5.html">Task 5</a></td>
-            <td><a href="task-6/task6.html">Task 6</a></td>
+            <td><a href="task-6/index.html">Task 6</a></td>
             <td><a href="task-7/task7.html">Task 7</a></td>
             <td><a href="task-7/task7.html">Task 8</a></td>
         </tr>
